--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -18,9 +18,15 @@ h6 {
 }
 h1{
     font-size: 96px;
+    line-height: 1.5;
+}
+h2{
+  font-size: 64px;
 }
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background: var(--secondary-color);
@@ -35,7 +41,7 @@ p {
 .hero h2{
     font-family: var(--heading-font-family);
     font-weight: normal;
-    line-height: 2;
+    line-height: 1.5;
     font-size: 24px;
     color: #272142;
 }
@@ -46,4 +52,32 @@ p {
     padding: 15px 30px;
     font-size: 18px;
     line-height: 27px;
+}
+.btn-branding-outline{
+    border-radius: 4px;
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    padding: 15px 30px;
+    font-size: 18px;
+    line-height: 27px;
+}
+.project-description{
+  padding: 30px 60px;
+}
+@media(max-width: 900px){
+  h1{
+    font-size: 40px;
+    line-height: 2;
+  }
+  h2{
+    font-size: 44px;
+  }
+  .hero {
+  padding: 80px 20px;
+}
+.project-description{
+  padding: 0;
+  text-align: center;
+}
+  
 }
