--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -33,10 +33,6 @@ p {
   text-align: center;
   padding: 160px 20px;
 }
-.about-section h1{
-  font-size: 64px;
-  line-height: 80px;
-}
 .hero p {
   font-size: 36px;
   font-weight: bold;
@@ -49,19 +45,32 @@ p {
     font-size: 24px;
     color: #272142;
 }
-.about-section{
+.content-container{
    padding: 160px 20px;
 }
-.about-section-content{
+.content{
   margin: 30px;
+}
+.content h1{
+  font-size: 64px;
+  line-height: 80px;
+}
+.content h2{
+  font-size: 18px;
+ font-family: var(--default-font-family); 
+}
+.content h3{
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family); 
+}
+.content p{
+  font-size: 14px;
 }
 .mypics{
   border-radius: 20px;
 }
-.about-section h2{
-  font-size: 18px;
- font-family: var(--default-font-family); 
-}
+
 
 .btn-branding{
     background: var(--branding-color);
@@ -93,7 +102,7 @@ p {
   .hero {
   padding: 80px 20px;
 }
-.about-section{
+.content{
   text-align: center;
   padding: 0;
 }
