--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,11 +1,11 @@
-:root{
-    --branding-color: #6C63FF;
-    --heading-font-family: "Playfair Display", serif;
-    --default-font-family: "poppins", sans-serif;
-    --secondary-color: #f9f7fe;
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "poppins", sans-serif;
+  --secondary-color: #f9f7fe;
 }
-body{
-    font-family: var(--default-font-family);
+body {
+  font-family: var(--default-font-family);
 }
 h1,
 h2,
@@ -16,11 +16,11 @@ h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
-h1{
-    font-size: 96px;
-    line-height: 1.5;
+h1 {
+  font-size: 96px;
+  line-height: 1.5;
 }
-h2{
+h2 {
   font-size: 64px;
 }
 p {
@@ -38,103 +38,109 @@ p {
   font-weight: bold;
   margin: 0;
 }
-.hero h2{
-    font-family: var(--heading-font-family);
-    font-weight: normal;
-    line-height: 1.5;
-    font-size: 24px;
-    color: #272142;
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
+  color: #272142;
 }
-.content-container{
-   padding: 160px 20px;
+.content-container {
+  padding: 160px 20px;
 }
-.content{
+.content {
   margin: 30px;
 }
-.content h1{
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.content h2{
+.content h2 {
   font-size: 18px;
- font-family: var(--default-font-family); 
+  font-family: var(--default-font-family);
 }
-.content h3{
+.content h3 {
   font-size: 24px;
   line-height: 1.5;
-  font-family: var(--default-font-family); 
+  font-family: var(--default-font-family);
 }
-.content p{
+.content p {
   font-size: 14px;
 }
-.mypics{
+.mypics {
   border-radius: 20px;
 }
 
-
-.btn-branding{
-    background: var(--branding-color);
-    border-radius: 4px;
-    color: #ffffff;
-    padding: 15px 30px;
-    font-size: 18px;
-    line-height: 27px;
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 15px 30px;
+  font-size: 18px;
+  line-height: 27px;
 }
-.btn-branding-outline{
-    border-radius: 4px;
-    color: var(--branding-color);
-    border: 1px solid var(--branding-color);
-    padding: 15px 30px;
-    font-size: 18px;
-    line-height: 27px;
+.btn-branding-outline {
+  border-radius: 4px;
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  padding: 15px 30px;
+  font-size: 18px;
+  line-height: 27px;
 }
-.project-description{
+.project-description {
   padding: 30px 60px;
 }
-.logo{
+.logo {
   max-height: 30px;
 }
-nav{
+nav {
   padding: 20px 0;
 }
-nav ul{
+nav ul {
   padding: 0;
   margin: 0;
 }
-nav li{
+nav li {
   display: inline;
   list-style: none;
   line-height: 42px;
   margin-left: 15px;
 }
-nav a{
+nav a {
   text-decoration: none;
   color: #272142;
   transition: all 100ms ease-in-out;
 }
 
 nav a:hover,
-nav li.active a{
+nav li.active a {
   color: var(--branding-color);
 }
-@media(max-width: 900px){
-  h1{
+footer {
+  margin: 60px 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: #000000;
+  font-size: 24px;
+}
+@media (max-width: 900px) {
+  h1 {
     font-size: 40px;
     line-height: 56px;
   }
-  h2{
+  h2 {
     font-size: 44px;
   }
   .hero {
-  padding: 80px 20px;
-}
-.content{
-  text-align: center;
-  padding: 0;
-}
-.project-description{
-  padding: 0;
-  text-align: center;
-}
-  
+    padding: 80px 20px;
+  }
+  .content {
+    text-align: center;
+    padding: 0;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
