--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -23,6 +23,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4{
+  font-size: 48px;
+}
 p {
   font-weight: normal;
   font-size: 16px;
@@ -119,10 +122,34 @@ nav li.active a {
 footer {
   margin: 60px 0;
 }
+footer .contact-box{
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p{
+  margin: 0;
+}
 footer .email-link {
   text-decoration: none;
   color: #000000;
   font-size: 24px;
+}
+footer .email-link:hover{
+  color: var(--branding-color);
+}
+footer .social-links a{
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 150ms ease-in-out;
+}
+footer .social-links a:hover{
+  color: #ffffff;
+  background-color: var(--branding-color);
 }
 @media (max-width: 900px) {
   h1 {
@@ -131,6 +158,9 @@ footer .email-link {
   }
   h2 {
     font-size: 44px;
+  }
+  h4{
+    font-size: 26px;
   }
   .hero {
     padding: 80px 20px;
@@ -143,4 +173,5 @@ footer .email-link {
     padding: 0;
     text-align: center;
   }
+  
 }
